--- a/playbooks/demo.yml
+++ b/playbooks/demo.yml
@@ -10,7 +10,7 @@
       service:
         name:  httpd
         state:  started
-        enable:  yes
+        enabled:  yes
     - name:  Crear fichero Index.html
       file:
         path:  /var/www/html/index.html
